--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "material-ui-dropzone": "^3.5.0",
     "dotenv": "^10.0.0",
+    "material-ui-dropzone": "^3.5.0",
+    "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-onclickoutside": "^6.11.2",
     "react-password-strength-bar": "^0.3.3",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
